--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "repository": "https://github.com/Medium/eng-growth",
   "license": "MIT",
   "dependencies": {
-    "d3": "^4.11.0",
-    "next": "^9.0.7",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "d3": "^7.9.0",
+    "next": "^15.1.7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   },
   "scripts": {
     "dev": "next",
@@ -16,7 +19,8 @@
     "flow": "flow"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.9",
     "@babel/preset-flow": "^7.0.0",
-    "flow-bin": "^0.57.2"
+    "flow-bin": "^0.261.2"
   }
 }
